[package]
name = "jammy_splash_screen"
version = "0.0.1"
authors = ["Maurice Wangleng Tan <tanwangleng@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.1", default-features = false, features = ["bevy_core_pipeline", "bevy_render", "bevy_sprite"] }
iyes_progress = { version = "0.8" }
